Commit .gitignore for Webstorm config files.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,11 @@ bower_components/
 .floobit
 .floo
 .flooignore
+.idea/.name
+.idea/2014-12-watchout.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/scopes/scope_settings.xml
